--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cpe>=1.3.1",
+    "lxml>=6.0.2",
+    "requests>=2.32.5",
     "rich>=14.2.0",
     "survey>=5.4.2",
 ]
